[tool.poetry]
name = "kci-deploy"
version = "0.0.1"
description = "Stand-alone tool for deploy KernelCI"
authors = ["Arisu Tachibana <arisu.tachibana@miraclelinux.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
packages = [
{include = "kcideploy", format = ["sdist", "wheel"]},
{include = "subcommands", from="kcideploy", format = ["sdist", "wheel"]},
{include = "libs", from="kcideploy", format = ["sdist", "wheel"]},
{include = ".kci-deploy.toml.example", to="kcideploy", format = ["sdist", "wheel"]},
]
repository = "https://github.com/kernelci/kci-deploy"
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Operating System :: OS Independent',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"
gitpython = "^3.1.43"
tomli = { version = "^2.2.1", python = "<3.11" }
pyyaml = "^6.0.2"

[tool.poetry.scripts]
kci-deploy = 'kcideploy.main:run'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/kernelci/kci-deploy/issues"
Documentation = "https://docs.kernelci.org/kci-deploy/"
Changelog = "https://github.com/kernelci/kci-deploy/releases"

[tool.poetry.group.ci.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
poethepoet = "^0.29.0"
tox = "^4.24.1"

[tool.poe.tasks]
check = "./scripts/check.sh"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
